--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,14 @@ html, body {
     max-height: 100%;
     object-fit: cover;
 }
+.contact {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
 
 .visible-xxs {
     display: none;
